# cpp-playground

cpptest1/: CMakeLists.txt
cpptest1/src/: CMakeLists.txt  cpptest1.cpp  cpptest_argv.cpp
sudo_plug_sample/: CMakeLists.txt
sudo_plug_sample/src/: CMakeLists.txt  sudo_plug_sample.cpp
sudo_plug_sample/tests/: CMakeLists.txt  tests.cpp
